# CADRAKEngine

./: .gitignore  README.md  app.py  data.json  dxf_parser.py  entity_and_layer_info_printing.py  testing.py
app/: __init__.py  routes.py
app/parsers/: clustering.py  dimension_analysis.py  drawing_parsing.py  dxf_parser.py  dxf_parsing_main.py  dxf_title_block_parser.py  matplotlib_visualization.py  parsing.py  parsing_clustering.py  parsing_utilities.py  utilities.py  visualization.py  visualization_utilities.py
app/parsers/text_analysis/: label_mapping.csv  text_analysis.py
cgal_alpha_shape/: CMakeLists.txt  alpha_shape.cpp
config/: logging_config.py
